MacBook用レイアウト自動切り替え機能の仕様書を追加

--- a/keyboards/36_procyon_bwrs1/仕様書/キーマップ仕様書.md
+++ b/keyboards/36_procyon_bwrs1/仕様書/キーマップ仕様書.md
@@ -11,12 +11,13 @@
 ## レイヤー構成
 
 ### レイヤー一覧
-- **`_BASE`**: 基本レイヤー（アルファベット、記号）
+- **`_BASE`**: 基本レイヤー（アルファベット、記号）- Windows用
 - **`_RAISE`**: 記号、数字（プログラミング記号強化）
 - **`_MOUSE`**: マウス操作
 - **`_LOWER`**: ファンクションキー、ナビゲーション
 - **`_MEDIA`**: メディア制御
 - **`_PROGRAM`**: プログラミング作業専用（新規追加）
+- **`_MACBOOK`**: MacBook用レイアウト（新規追加）
 - **`_ADJUST`**: RGB設定、特殊機能
 
 ### レイヤー切り替え方法
@@ -25,17 +26,19 @@
 - **`_LOWER`レイヤー**: `MO(1)`と`MO(2)`を同時に押す（一時的）
 - **`_MEDIA`レイヤー**: `MO(1)`と`MO(2)`を同時に押す（一時的）
 - **`_PROGRAM`レイヤー**: `MO(1)`と`MO(2)`を同時に押す（一時的）
+- **`_MACBOOK`レイヤー**: 左側キーボード接続時に自動切り替え
 - **`_ADJUST`レイヤー**: `MO(1)`と`MO(2)`を同時に押す（永続的）
 
 ### レイヤー別RGB色設定
 | レイヤー | 色 | 説明 |
 |---------|----|----|
-| **`_BASE`** | 🟦 **シアン** | 基本レイヤー |
+| **`_BASE`** | 🟦 **シアン** | 基本レイヤー（Windows用） |
 | **`_RAISE`** | 🟢 **緑** | 記号・数字（プログラミング記号強化） |
 | **`_MOUSE`** | 🟣 **紫** | マウス操作 |
 | **`_LOWER`** | 🔴 **赤** | ファンクションキー |
 | **`_MEDIA`** | 🩷 **ピンク** | メディア制御 |
 | **`_PROGRAM`** | 🔵 **青** | プログラミング作業専用 |
+| **`_MACBOOK`** | 🟡 **黄色** | MacBook用レイアウト |
 | **`_ADJUST`** | 🟠 **オレンジ** | RGB設定 |
 
 ### 色変更の仕組み
@@ -114,6 +117,27 @@
                   │     │     │LGUI │     │ SPC │ ENT │     │     │     │     │
                   └─────┴─────┴─────┴─────┴─────┴─────┴─────┴─────┴─────┴─────┘
 ```
+
+### `_MACBOOK`レイヤー（MacBook用レイアウト）- 🟡 黄色
+```
+左側                   右側
+┌─────┬─────┬─────┬─────┬─────┬─────┐    ┌─────┬─────┬─────┬─────┬─────┬─────┐
+│ TAB │  Q  │  W  │  E  │  R  │  T  │    │  Y  │  U  │  I  │  O  │  P  │BSPC │
+├─────┼─────┼─────┼─────┼─────┼─────┤    ├─────┼─────┼─────┼─────┼─────┼─────┤
+│LCTL │  A  │  S  │  D  │  F  │  G  │    │  H  │  J  │  K  │  L  │  ;  │  '  │
+├─────┼─────┼─────┼─────┼─────┼─────┤    ├─────┼─────┼─────┼─────┼─────┼─────┤
+│LSFT │  Z  │  X  │  C  │  V  │  B  │    │  N  │  M  │  ,  │  .  │  /  │RSFT │
+└─────┴─────┴─────┼─────┼─────┼─────┤    ├─────┼─────┼─────┼─────┴─────┴─────┘
+                  │LGUI │LALT │LGUI │MO(1)│ SPC │ ENT │MO(2)│BSPC │LALT │RGUI │
+                  └─────┴─────┴─────┴─────┴─────┴─────┴─────┴─────┴─────┴─────┘
+```
+
+**MacBook用レイアウトの特徴：**
+- **Commandキー**: 左下に配置（MacBook標準）
+- **Optionキー**: 右下に配置（MacBook標準）
+- **Controlキー**: 左側の2段目に配置
+- **Shiftキー**: 左右両端に配置
+- **自動切り替え**: 左側キーボード接続時に自動でこのレイアウトに切り替え
 
 ### `_ADJUST`レイヤー（RGB設定）- 🟠 オレンジ
 ```
@@ -272,6 +296,65 @@
 2. **物理リセットボタン**: PCB背面のボタンを短時間押す
 3. **キーコード**: `QK_BOOT`がマップされているキーを押す
 
+## 接続側検出と自動レイアウト切り替え機能
+
+### 🔄 自動レイアウト切り替え機能
+
+#### **機能概要**
+キーボードの接続側を検出し、自動的に適切なレイアウトに切り替える機能です。
+
+#### **接続側検出の仕組み**
+- **検出ピン**: `SPLIT_HAND_PIN`（GP29）を使用
+- **検出方法**: ピンのHIGH/LOW状態で左右判定
+- **設定**: `SPLIT_HAND_PIN_LOW_IS_RIGHT`で右側がLOWに設定
+
+#### **自動切り替え動作**
+| 接続側 | レイアウト | RGB色 | 説明 |
+|--------|------------|-------|------|
+| **左側キーボード** | `_MACBOOK` | 🟡 **黄色** | MacBook用レイアウトに自動切り替え |
+| **右側キーボード** | `_BASE` | 🟦 **シアン** | Windows用レイアウト（通常動作） |
+
+#### **切り替えタイミング**
+1. **起動時**: キーボード初期化時に接続側を検出
+2. **接続変更時**: 接続状態が変更された瞬間に自動切り替え
+3. **継続監視**: `matrix_scan_user`で常時接続状態を監視
+
+#### **視覚的フィードバック**
+- **MacBookモード**: 黄色のRGB色で識別
+- **Windowsモード**: シアン色のRGB色で識別
+- **即座反映**: 切り替え時にRGB色が即座に変更
+
+### 🔧 実装詳細
+
+#### **接続側検出関数**
+```c
+bool detect_left_connection(void) {
+    #ifdef SPLIT_HAND_PIN_LOW_IS_RIGHT
+        return !readPin(SPLIT_HAND_PIN);
+    #else
+        return readPin(SPLIT_HAND_PIN);
+    #endif
+}
+```
+
+#### **自動切り替え処理**
+```c
+void matrix_scan_user(void) {
+    bool current_left_connected = detect_left_connection();
+    
+    if (current_left_connected != is_left_connected) {
+        is_left_connected = current_left_connected;
+        macbook_mode_active = is_left_connected;
+        
+        if (macbook_mode_active) {
+            layer_move(_MACBOOK);
+        } else {
+            layer_move(_BASE);
+        }
+    }
+}
+```
+
 ## 右側キーボード接続時の設定
 
 ### 🔧 右側キーボード接続時の最適化設定
@@ -322,6 +405,40 @@
 - **VIA/Vial対応**: ブラウザ経由での設定変更可能
 - **ファームウェア更新**: 右側からファームウェア更新可能
 
+## 使用方法
+
+### 🔄 自動レイアウト切り替えの使用方法
+
+#### **MacBook使用時**
+1. **左側キーボードにType-Cケーブルを接続**
+2. **自動的にMacBook用レイアウトに切り替え**
+3. **RGB色が黄色に変更され、MacBookモードであることを確認**
+4. **CommandキーとOptionキーがMacBook標準位置に配置**
+
+#### **Windows使用時**
+1. **右側キーボードにType-Cケーブルを接続**
+2. **自動的にWindows用レイアウトに切り替え**
+3. **RGB色がシアン色に変更され、Windowsモードであることを確認**
+4. **CtrlキーがWindows標準位置に配置**
+
+#### **切り替えの確認方法**
+- **RGB色の確認**: 黄色 = MacBookモード、シアン = Windowsモード
+- **キー配置の確認**: Commandキーの位置で判定
+- **即座切り替え**: 接続を変更すると瞬時に切り替わる
+
+### 🔧 トラブルシューティング
+
+#### **自動切り替えが動作しない場合**
+1. **接続確認**: Type-Cケーブルが正しく接続されているか確認
+2. **RGB色確認**: 接続側に応じた色に変更されているか確認
+3. **再起動**: キーボードを再起動して接続側を再検出
+4. **ファームウェア確認**: 最新のファームウェアが書き込まれているか確認
+
+#### **レイアウトが期待と異なる場合**
+1. **接続側の確認**: 意図した側にケーブルが接続されているか確認
+2. **RGB色の確認**: 期待する色に変更されているか確認
+3. **手動切り替え**: 一時的に手動でレイヤーを切り替えて動作確認
+
 ## カスタマイズ可能項目
 
 ### レイヤー色の変更
@@ -364,5 +481,5 @@ KC_SLEP,  // スリープ
 ---
 
 **作成日**: 2025年8月4日  
-**バージョン**: 1.4（横スクロール機能・メディアレイヤー追加）  
+**バージョン**: 1.5（MacBook用レイアウト自動切り替え機能追加）  
 **作成者**: QMK Firmware 
